src/css/styles.css
/* ... */
.about .about-content .timeline .timeline-text {
    line-height: 25px;
    font-size: 16px;
    text-align: justify;
    color: var(--text-black-700);
}

/* ********** Services ********** */

.service .container {
    padding-bottom: 40px;
}

.service .service-item {
    margin-bottom: 30px;
    flex: 0 0 33.33%;
    max-width: 33%;
}

.service .service-item .service-item-inner {
    background-color: var(--big-black-100);
    border: 1px solid var(--bg-black-50);
    border-radius: 10px;
    padding: 30px 15px;
    text-align: center;
    transition: all 0.3s ease;
}

.service .service-item .service-item-inner:hover {
    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
}

.service .service-item .service-item-inner .icon {
    height: 60px;
    width: 60px;
    border-radius: 50%;
    display: block;
    margin: 0 auto 30px;
    text-align: center;
    transition: all 0.3s ease;
}

.service .service-item .service-item-inner:hover .icon {
    background: var(--skin-color);
}

.service .service-item .service-item-inner .icon .fa {
    font-size: 40px;
    line-height: 60px;
    color: var(--skin-color);
    transition: all 0.3s ease;
}

.service .service-item .service-item-inner:hover .icon .fa {
    font-size: 25px;
    color: #ffffff;
}

.service .service-item .service-item-inner h4 {
    font-size: 18px;
    margin-bottom: 15px;
    color: var(--text-black-900);
    font-weight: 700;
    text-transform: capitalize;
}

.service .service-item .service-item-inner p {
    font-size: 16px;
    color: var(--text-black-700);
    line-height: 25px;
}

/* ********** Projects ********** */

.portfolio .container {
    padding-bottom: 40px;
}

.projects .projects-heading {
    flex: 0 0 100%;
    max-width: 100%;
    margin-bottom: 40px;
}

.projects .projects-heading h2 {
    color: var(--text-black-900);
    font-weight: 500;
}

.projects .projects-item {
    flex: 0 0 33.33%;
    max-width: 33.33%;
    margin-bottom: 30px;
}

.projects .projects-item-inner {
    border: 6px solid var(--big-black-100);
    border-radius: 10px;
    overflow: hidden;
    cursor: pointer;

}

.projects .projects-item-inner .projects-img img {

    height: 250px;
    width: 330px;
    display: block;
}

/* ********** Contact ********** */

.contact-title {
    color: var(--skin-color);
    text-align: center;
    font-size: 25px;
    margin-bottom: 20px;
}

.contact-sub-title {
    color: var(--text-black-900);
    text-align: center;
    font-size: 15px;
    margin-bottom: 60px;
}

.contact .contact-info-item {
    flex: 0 0 33.33%;
    max-width: 33.33%;
    text-align: center;
    margin-bottom: 60px;
}

.contact .contact-info-item .icon {
    display: inline-block;
}

.contact .contact-info-item .icon .fa {
    font-size: 25px;
    color: var(--skin-color);
}

.contact .contact-info-item h4 {
    font-size: 18px;
    font-weight: 700;
    color: var(--text-black-900);
    text-transform: capitalize;
    margin: 15px 0 5px;
}

.contact .contact-info-item p {
    font-size: 16px;
    line-height: 25px;
    color: var(--text-black-700);
    font-weight: 400;
}

.contact .contact-form {
    flex: 0 0 100%;
    max-width: 100%;
}

.contact .contact-form .col-6 {
    flex: 0 0 50%;
    max-width: 50%;
}

.contact .contact-form .col-12 {
    flex: 0 0 100%;
    max-width: 100%;
}

.contact .contact-form .form-item {
    margin-bottom: 30px;
}

.contact .contact-form .form-item .form-control {
    width: 100%;
    height: 50px;
    border-radius: 25px;
    background: var(--big-black-100);
    border: 1px solid var(--bg-black-50);
    padding: 10px 25px;
    font-size: 16px;
    color: var(--text-black-700);
    transition: all 0.3s ease;
}

.contact .contact-form .form-item .form-control:focus {
    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
}

.contact .contact-form .form-item textarea.form-control {
    height: 140px;
}

.contact .contact-form .btn {
    height: 50px;
    padding: 0 50px;
}

@media only screen and (max-width:1199px) {
    .aside {
        left: -270px;
    }

    .aside.open {
        left: 0;
    }

    .aside .nav-toggler {
        display: flex;
        left: 30px; 
    }

    .aside .nav-toggler.open {
        left: 300px;
    }

    .section {
        left: 0;
    }

    .section .container {
        padding-top: 70px;
    }

    .section.open {
        left: 270px;
    }

    .about .about-content .personal-info .info-item p span {
        display: block;
        margin-left: 0;
    }

}

@media only screen and (max-width:991px) {

    .home .home-img,
    .about .about-content .personal-info,
    .about .about-content .skills,
    .about .about-content .education,
    .about .about-content .experience,
    .contact .contact-info-item,
    .projects .projects-item,
    .service .service-item {
        flex: 0 0 100%;
        max-width: 100%;
    }

    .home .home-info {
        flex: 0 0 100%;
        max-width: 100%;
        margin-bottom: 70px;
    }

    .home-img::before {
        left: 30%;
    }

    .home-img::after {
        right: 30%;
    }

    .projects .projects-item {
        flex: 0 0 50%;
        max-width: 50%;
    }

    .projects .projects-item-inner .projects-img img {
        width: 100%;
        height: 450px;
    }

}

@media only screen and (max-width:767px) {

    .contact .contact-form .col-6,
    .projects .projects-item {
        flex: 0 0 100%;
        max-width: 100%;
    }
    .home-img::before {
        left: 20%;
    }

    .home-img::after {
        right: 20%;
    }

}

@media only screen and (max-width:440px) and (min-width: 320px) {
    .home-img::before {
        left: 10%;
    }

    .home-img::after {
        right: 10%;
    }
}

